# pi-robot

./: .gitignore  blink.py  mqtt_server.py  pyproject.toml  receive_stream.sh  video_stream.sh
bot_code/: constants.py  motor.py  object_follower.py  pi_robot.py  run-mqtt.py  run.py  run_zmq.py  sim_pibot.py  test_bot.py
communication/: laptop_zmq.py  mqtt_server.py  run.py  run_zmq.py  server.py  video_stream.sh
