[project]
name = "pi-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pigpio>=1.78",
    "pip>=25.2",
    "pyzmq>=27.0.1",
    "rpi",
    "ultralytics>=8.3.177",
]

[tool.uv.sources]
rpi = { git = "https://github.com/nosix/raspberry-gpio-emulator/" }
